--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#portfolio">Experience</a></li>
                 </ul>
             </nav>
         </div>
@@ -47,10 +46,10 @@
 
     <section id="portfolio">
         <div class="container">
-            <h2>Portfolio</h2>
+            <h2>Experience</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <img src="project1.jpg" alt="Project 1">
+                    <img src="usda.png" alt="Project 1">
                     <h3>Project Title 1</h3>
                     <p>Short description of the project.</p>
                 </div>
