--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Andrew J Li - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <a href="https://www.linkedin.com/in/andelupe/" target="_blank">
-                    <img src="linkedin_logo.png" alt="LinkedIn" class="linkedin-icon">
-                </a>
                 <h1>Andrew J Li</h1>
             </div>
             <nav>
@@ -29,8 +24,8 @@
 
     <section id="home">
         <div class="home-content">
-            <h2>Hello, I'm <span>Andrew J Li</span></h2>
-            <img src="headshot.jpg" alt="Headshot" class="headshot">
+            <h2>Hello, I'm Andrew J Li</h2>
+            <img src="headshot.jpg" alt="Andrew J Li" class="headshot">
             <p>Welcome to my portfolio website. Here you can find information about me, my work, and how to contact me.</p>
             <a href="#portfolio" class="btn">View My Work</a>
         </div>
@@ -39,8 +34,25 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I'm a first-year student at the University of Texas at Austin studying Computer Science and Business in the CSB Honors Program.
-                I'm especially interested in software engineering, machine learning, and quantitative finance with prior experience in Java, C++, and Python.</p>
+            <p>I'm a first-year student at the University of Texas at Austin studying Computer Science and Business in the CSB Honors Program. I'm especially interested in software engineering, machine learning, and quantitative finance with prior experience in Java, C++, and Python.</p>
+            <div class="social-buttons">
+                <a href="https://www.linkedin.com/in/andelupe/" target="_blank" class="social-btn linkedin-btn">
+                    <img src="linkedin_logo.png" alt="LinkedIn" class="social-icon">
+                    LinkedIn
+                </a>
+                <a href="https://github.com/Andrew-J-Li" target="_blank" class="social-btn github-btn">
+                    <img src="github_logo.png" alt="GitHub" class="social-icon">
+                    GitHub
+                </a>
+                <a href="mailto:andrewjli@utexas.edu" class="social-btn email-btn">
+                    <img src="email_logo.png" alt="Email" class="social-icon">
+                    Email
+                </a>
+                <a href="https://codeforces.com/profile/Andelupe" target="_blank" class="social-btn codeforces-btn">
+                    <img src="codeforces_logo.png" alt="Codeforces" class="social-icon">
+                    Codeforces
+                </a>
+            </div>
         </div>
     </section>
 
@@ -49,13 +61,13 @@
             <h2>Experience</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <img src="usda.png" alt="Project 1">
+                    <img src="project1.jpg" alt="Project 1">
                     <h3>Project Title 1</h3>
                     <p>Short description of the project.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="project2.jpg" alt="Project 2">
-                    <h3>Project Title 2</h3>
+                    <img src="usda.png" alt="USDA Internship">
+                    <h3>Machine Learning Research Intern at the USDA</h3>
                     <p>Short description of the project.</p>
                 </div>
                 <div class="portfolio-item">
@@ -67,12 +79,10 @@
         </div>
     </section>
 
-
     <footer>
         <div class="container">
-            <p>&copy; 2024 Andrew J Li. All Rights Reserved.</p>
+            <p>© 2024 Andrew J Li. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
-
 </html>
