Added resume button and images.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                     <img src="codeforces_logo.png" alt="Codeforces" class="social-icon">
                     Codeforces
                 </a>
+                <a href="https://drive.google.com/file/d/1WDqJJuNqg3b08jPm1o24YC01yY8-EmYf/view?usp=sharing" target="_blank" class="social-btn resume-btn">
+                    <img src="resume_logo.png" alt="Resume" class="social-icon">
+                    Resume
+                </a>
             </div>
         </div>
     </section>
@@ -67,13 +71,13 @@
                 </div>
                 <div class="portfolio-item">
                     <img src="usda.png" alt="USDA Internship">
-                    <h3>Machine Learning Research Intern at the USDA</h3>
-                    <p>Short description of the project.</p>
+                    <h3>ML Research Intern at the USDA</h3>
+                    <p></p> <!-- optional text description -->
                 </div>
                 <div class="portfolio-item">
-                    <img src="project3.jpg" alt="Project 3">
-                    <h3>Project Title 3</h3>
-                    <p>Short description of the project.</p>
+                    <img src="aandm.png" alt="Research at A&M">
+                    <h3>Earthquake Modeling Research at Texas A&M University</h3>
+                    <p></p>
                 </div>
             </div>
         </div>
