Updated experience descriptions.

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <h2>Experience</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <img src="project1.jpg" alt="Project 1">
-                    <h3>Project Title 1</h3>
-                    <p>Short description of the project.</p>
+                    <img src="ut_austin.png" alt="UT-Austin">
+                    <h3>First-Year CS and Business student at the University of Texas at Austin</h3>
+                    <p></p>
                 </div>
                 <div class="portfolio-item">
                     <img src="usda.png" alt="USDA Internship">
-                    <h3>ML Research Intern at the USDA</h3>
+                    <h3>Machine Learning Research Intern at the U.S. Department of Agriculture</h3>
                     <p></p> <!-- optional text description -->
                 </div>
                 <div class="portfolio-item">
