--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="portfolio-items">
                 <div class="portfolio-item">
                     <img src="ut_austin.png" alt="UT-Austin">
-                    <h3>First-Year CS and Business student at the University of Texas at Austin</h3>
+                    <h3>First-Year CS + Business student at the University of Texas at Austin</h3>
                     <p></p>
                 </div>
                 <div class="portfolio-item">
