--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I'm a first-year student at the University of Texas at Austin studying Computer Science and Business in the CSB Honors Program. I'm especially interested in software engineering, machine learning, and quantitative finance with prior experience in Java, C++, and Python.</p>
+            <p>I'm a student at the University of Texas at Austin studying Computer Science and Business in the CSB Honors Program. I'm especially interested in software engineering, machine learning, and quantitative finance with prior experience in Java, C++, and Python.</p>
             <div class="social-buttons">
                 <a href="https://www.linkedin.com/in/andelupe/" target="_blank" class="social-btn linkedin-btn">
                     <img src="linkedin_logo.png" alt="LinkedIn" class="social-icon">
@@ -66,7 +66,7 @@
             <div class="portfolio-items">
                 <div class="portfolio-item">
                     <img src="ut_austin.png" alt="UT-Austin">
-                    <h3>First-Year CS + Business Honors Student at the University of Texas at Austin</h3>
+                    <h3>CS + Business Honors Student at the University of Texas at Austin</h3>
                     <p></p>
                 </div>
                 <div class="portfolio-item">
